--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,8 +11,8 @@
 
   <meta charset = "UTF-8">
   <meta name="viewport" content="width=device-width initial-scale=1.0">
-  <meta name="Description" content = "Website for Stephanie Yip, a computer engineer interested in software and learning new things.">
-  <title>{{site.title}} | {{page.title}}</title>
+  <meta name="Description" content = "{{ site.description }}">
+  <title>{{site.title}}</title>
 
   <link rel = "stylesheet" href = "{{ site.url }}/assets/css/main.css">
 
