--- a/_includes/resume.html
+++ b/_includes/resume.html
@@ -1,7 +1,23 @@
 <section id = "resume">
   <h1>Résumé</h1>
 
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ultrices sem eget erat congue ultrices. Phasellus ultricies fermentum diam ac fermentum. Nullam eget tincidunt tellus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse mattis tincidunt quam vel egestas. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nunc at vulputate nulla.
+  <div class = "resume-container">
+    
+    {% for entry in site.data.resume_work %}
+    <div class = "resume-org">{{ entry.org }}</div>
+    <div class = "resume-dates">{{ entry.dates }}</div>
+    <div class = "resume-role">{{ entry.role }}</div>
+    <div class = "resume-list">
+      <ul>
+        {% for description in entry.description %}
+        <li>{{ description.item }}</li>
+        {% endfor %}
+      </ul>
+    </div>
+    {% endfor %}
+    <div class = "resume-center"><a href = "" class = "btn">See Full Résumé</a></div>
 
-  Praesent iaculis nunc ac lobortis imperdiet. Nunc ac ipsum a enim gravida dignissim. Nulla nisl dolor, interdum sit amet ultricies quis, varius vitae nisl. In fermentum, nulla at ornare pellentesque, est leo ultrices lorem, euismod pulvinar lorem nunc id nunc. Aenean et elit in sapien porttitor placerat et id arcu. Vestibulum ultricies augue non turpis posuere dapibus. Nunc felis magna, pharetra nec rhoncus ac, semper quis nunc. Proin dui nibh, rhoncus non mauris et, fringilla mattis dolor. Aliquam mollis odio quis finibus consequat. Ut sollicitudin libero a nisi blandit, vel tristique tortor dictum. Aliquam auctor ligula sed enim finibus dictum. Ut pretium ultricies tellus. Integer luctus fringilla iaculis.
+  </div>
+
+  
 </section>
