--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -1,11 +1,5 @@
-.social-icons{
-  display: none;
-}
-
 footer {
   display: grid;
-  grid-template-columns: auto auto;
-  grid-template-rows: auto;
   padding: 15px 20px 15px 20px;
   background: $medium;
   left: 0;
@@ -15,33 +9,6 @@ footer {
 
   h1 {
     @extend %outer-text;
-    padding-right: 15px;
-    text-align: left;
-    grid-row: 1;
-    grid-column: 1;
+    text-align: center;
   }
-
-  li {
-    display: inline;
-    padding-left: 20px;
-    font-size: 14px;
-
-    &:first-child{
-      padding-left: 0;
-    }
-
-    a {
-      @extend %outer-text;
-
-      &:hover{
-        @extend %link-hover;
-      }
-    }
-  }
-}
-
-.social-links {
-  text-align: right;
-  grid-row: 1;
-  grid-column: 2;
 }
