--- a/_sass/_jumbotron.scss
+++ b/_sass/_jumbotron.scss
@@ -1,5 +1,5 @@
 .jumbotron{
-  padding: 150px 0 150px 0;
+  padding: 150px 0;
   background-image: url('../img/jumbotron/homeJumbotron.jpg');
   background-size: 100% auto;
   background-repeat: no-repeat;
