--- a/_sass/_responsive-common.scss
+++ b/_sass/_responsive-common.scss
@@ -15,9 +15,6 @@
     background-position: 0px -250px;
   }
 
-  // #jumbotron-photography {
-  //   background-position: 0px -350px;
-  // }
 }
 
 // ----------------------------------------------------------------------------
@@ -57,6 +54,12 @@
     }
   }
 
+  // Prevent header text from centering in the project pages
+  .proj-pg-header {
+    text-align: left;
+    padding: 15px 15px 15px 20px;
+  }
+
   nav {
     ul {
       float: none;
@@ -71,39 +74,16 @@
 }
 
 // ----------------------------------------------------------------------------
-// Update Photography page jumbotron text size to fit
-// ----------------------------------------------------------------------------
-// @media all and (max-width: 735px){
-//   #jumbotron-photography h1 {
-//     font-size: 50px;
-//     letter-spacing: 10px;
-//     line-height: 40px;
-//     text-shadow: 2px 2px white;
-//   }
-// }
-// ----------------------------------------------------------------------------
 // Tablet+: Center text in footer
 // ----------------------------------------------------------------------------
 @media all and (max-width: 685px){
 
   footer{
-    grid-template-columns: auto;
-    grid-template-rows: auto auto;
-
     h1 {
-      padding-right: 0;
-      grid-row: 2;
-      padding-top: 15px;
-      text-align: center;
       line-height: 18px;
     }
   }
 
-  .social-links {
-    text-align: center;
-    grid-row: 1;
-    grid-column: 1;
-  }
 
   // Update width of container
   .container {
@@ -123,31 +103,10 @@
   }
 
   // Footer
-  .social-icons {
-    display: block;
-    text-align: center;
-    grid-row: 1;
-    grid-column: 1;
-  }
-
-  .social-links{
-    display: none;
-  }
-
   footer {
 
     h1 {
       padding-top: 0;
-    }
-
-    ul {
-      padding-top: 0;
-      padding-bottom: 15px;
-    }
-
-    li a {
-      font-size: 20px;
-      line-height: 14px;
     }
 
   }
@@ -161,7 +120,15 @@
 
     h1 {
       float: left;
-      padding-top: 0;
+      padding-top: 0; 
+    }
+  }
+
+  .proj-pg-header {
+    text-align: center;
+
+    h1 {
+      float: none;
     }
   }
 
@@ -170,7 +137,7 @@
     display: none;
   }
 
-  .icon-nav{
+  .icon-nav {
     display: inline-block;
     float: right;
     color: white;
@@ -213,18 +180,5 @@
 
   }
 
-  // // Update Photography page jumbotron text size to fit
-  // #jumbotron-photography h1 {
-  //   font-size: 30px;
-  //   letter-spacing: 10px;
-  //   line-height: 40px;
-  // }
 
 }
-
-// @media all and (max-width: 340px){
-//   #jumbotron-photography h1 {
-//     font-size: 28px;
-//     letter-spacing: 8px
-//   }
-// }
