--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -4,6 +4,7 @@
 @import "footer";
 @import "section";
 @import "jumbotron";
+@import "resume";
 @import "projects";
 @import "photography";
 @import "responsive-common";
