--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,15 +8,15 @@
 
     <div class = "text-nav">
       <ul>{% for item in site.data.nav %}
-        <li><a href = "{{ item.link }}" {% if item.name == page.title %} class = "active" {% endif %}>{{ item.name }}</a></li>
+        <li><a href = "{{ item.link }}">{{ item.name }}</a></li>
+        {% endfor %}</ul>
+    </div>
+
+    <div class = "icon-nav-links">
+      <ul>{% for item in site.data.nav %}
+        <li><a href = "{{ item.link }}">{{ item.name }}</a></li>
         {% endfor %}</ul>
     </div>
   </nav>
-
-  <div class = "icon-nav-links">
-    <ul>{% for item in site.data.nav %}
-      <li><a href = "{{ item.link }}" {% if item.name == page.title %} class = "active" {% endif %}>{{ item.name }}</a></li>
-      {% endfor %}</ul>
-  </div>
 
 </header>
