--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -75,7 +75,7 @@ nav {
 
 .icon-nav-links {
   @extend %outer-text;
-  transition: all 0.3s;
+  transition: opacity 0.4s, height 0.4s;
   border-top: 1px solid $accent;
   // box-shadow: 0 2px 5px $grayOpacity;
   background-color: $mediumOpacity;
@@ -94,6 +94,7 @@ nav {
 
   li {
     padding: 30px 0 0 0;
+    display: block;
 
     &:first-child {
       padding: 20px 0 0 0;
