Updated project pages + js files - Redesigned + edited text on project pages - Renamed .js files + concatenated all js files into one via Gulp - Updated 404 page design - Updated resume pdf - Added favicon - Redesigned projects section (changed location of details button) - Added smooth scrolling for the nav bar links + highlighting the title of the current section in the nav bar - Removed highlighting when user double-clicks on nav bar - Cleaned up sass files - Removed unnecessary files from previous version

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,7 +13,6 @@
   <meta name="viewport" content="width=device-width initial-scale=1.0">
   <meta name="Description" content = "{{ site.description }}">
   <title>{{site.title}}</title>
-
-  <link rel = "stylesheet" href = "{{ site.url }}/assets/css/main.css">
-
+  <link rel = "stylesheet" href = "{{ site.url }}/assets/css/main.css"> 
+  <link rel="icon" type="image/ico" href="{{ site.url }}/favicon.ico" />
 </head>
