--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -6,15 +6,14 @@
         <div class = "proj-block">
           <div class = "proj-title">{{ proj.title }}</div>
           <div class = "proj-subtitle">{{ proj.subtitle }}</div>
-          <a href = "/projects/{{ proj.link }}" class = "btn">Details <i class="fas fa-arrow-right"></i></a>
-          <img class = "proj-img" alt = "{{ proj.alt }}" src = "{{site.url}}/assets/img/projects/{{ proj.img }}"/>
           <div class = "proj-tech">
-          {% for tech in proj.tech %}
-            <div class = "proj-tech-single">{{ tech.item }}</div>
-          {% endfor %}
+            {% for tech in proj.tech %}
+              <div class = "proj-tech-single">{{ tech.item }}</div>
+            {% endfor %}
           </div>
+          <img class = "proj-img" alt = "{{ proj.alt }}" src = "{{site.url}}/assets/img/projects/{{ proj.img }}"/>
+          <div class = "proj-btn-container"><a href = "/projects/{{ proj.link }}{% if site.url == 'http://localhost:4000' %}.html{% endif %}" class = "btn">Details <i class="fas fa-arrow-right"></i></a></div>
         </div>
     {% endfor %}
   </div>
-<!-- {% if forloop.last == false %}, {% endif %} -->
 </section>
