--- a/_includes/resume.html
+++ b/_includes/resume.html
@@ -15,9 +15,8 @@
       </ul>
     </div>
     {% endfor %}
-    <div class = "resume-center"><a href = "" class = "btn">See Full Résumé</a></div>
+    <div class = "resume-btn-center"><a href = "{{ site.url}}/assets/StephanieYip_Resume_Dec2018.pdf" class = "btn">See Full Résumé</a></div>
 
   </div>
 
-  
 </section>
