--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -1,5 +1,7 @@
-.icon-nav{
+// Show/ hide hamburger icon to access menu
+.icon-nav {
   display: none;
+  transition: all 1s;
 }
 
 header {
@@ -8,12 +10,11 @@ header {
   top: 0;
   left: 0;
   right: 0;
-  transition-property: background-color;
-  transition-duration: 0.5s;
+  background-color: none;
+  transition: background-color 0.5s;
 
   h1 {
     @extend %outer-text;
-    // font-weight: 700;
     word-spacing: 5px;
     float: left;
     padding: 15px 15px 15px 20px;
@@ -21,22 +22,22 @@ header {
   }
 }
 
+// Turn the nav bar opaque when scrolled down
 .opaque {
   background-color: $medium;
   box-shadow: 0 1px 10px $grayOpacity;
   transition: background-color 0.5s;
 }
 
-.hover-shadow {
-  text-shadow: 0 3px $lightGray;
-}
-
+// Hide the name when the nav bar is not opaque
 .hide-name {
   visibility: hidden;
-  // transition: visibility 0.5s;
 }
 
+// ---------------------------------------------------------------------------
 // Nav Bar
+// ---------------------------------------------------------------------------
+
 nav {
   ul {
     padding: 15px 20px 15px 15px;
@@ -47,6 +48,7 @@ nav {
     display: inline;
     padding-left: 20px;
     font-size: 14px;
+    user-select: none;
 
     &:first-child{
       padding-left: 0;
@@ -64,20 +66,27 @@ nav {
   .active {
     @extend %link-hover;
     font-weight: 700;
+    transition: all 0.5s;
   }
 }
 
-// Responsive Nav Bar
+// ---------------------------------------------------------------------------
+// Mobile Nav Bar
+// ---------------------------------------------------------------------------
 
 #menu-icon:hover {
   cursor: pointer;
 }
 
+.icon-nav-active {
+  color: $accent;
+  transition: all 1s;
+}
+
 .icon-nav-links {
   @extend %outer-text;
-  transition: opacity 0.4s, height 0.4s;
+  transition: opacity 0.4s ease-out, height 0.4s ease-out, visibility 0.4s ease-out 0.4s;
   border-top: 1px solid $accent;
-  // box-shadow: 0 2px 5px $grayOpacity;
   background-color: $mediumOpacity;
   position: absolute;
   right: 0;
@@ -87,6 +96,7 @@ nav {
   width: 100%;
   height: 0;
   opacity: 0;
+  visibility: hidden;
   
   ul {
     padding: 15px 20px 15px 20px;
@@ -95,6 +105,7 @@ nav {
   li {
     padding: 30px 0 0 0;
     display: block;
+    user-select: none;
 
     &:first-child {
       padding: 20px 0 0 0;
@@ -108,7 +119,6 @@ nav {
   a {
     color: white;
     text-decoration: none;
-    // text-shadow: 0 2px $lightGray;
 
     &:hover {
       @extend %link-hover;
@@ -116,7 +126,10 @@ nav {
   }
 }
 
+// Show/ hide links when clicking hamburger icon
 .display-icon-menu {
   opacity: 1;
   height: 470%;
+  transition: opacity 0.4s ease-out, height 0.4s ease-out;
+  visibility: visible;
 }
