--- a/_sass/_jumbotron.scss
+++ b/_sass/_jumbotron.scss
@@ -8,8 +8,7 @@
   h1 {
     margin: 0 auto;
     text-align: center;
-    color: $darkAccent;
-    // text-shadow: 3px 0px white;
+    color: $accent;
     font-size: 70px;
     letter-spacing: 20px;
   	word-spacing: 20px;
@@ -23,13 +22,11 @@
     margin: 30px auto 0 auto;
     text-align: center;
     color: white;
-    // text-shadow: 1px 1px $darkAccent;
     font-size: 20px;
     letter-spacing: 1px;
     word-spacing: 1px;
     line-height: 25px;
     font-weight: 600;
-    // text-transform: uppercase;
     position: relative;
     z-index: 1;
 
@@ -47,23 +44,3 @@
 	opacity: 0.8;
 	position: absolute;
 }
-
-// #jumbotron-home {
-//   background-image: url('../img/jumbotron/homeJumbotron.jpg');
-// }
-
-// #jumbotron-resume {
-//   background-image: url('../img/jumbotron/resumeJumbotron.jpg');
-// }
-
-// #jumbotron-projects {
-//   background-image: url('../img/jumbotron/projectsJumbotron.jpg');
-// }
-
-// #jumbotron-photography {
-//   background-image: url('../img/jumbotron/photographyJumbotron.jpg');
-// }
-
-// #jumbotron-contact {
-//   background-image: url('../img/jumbotron/contactJumbotron.jpg');
-// }
