--- a/_sass/_projects.scss
+++ b/_sass/_projects.scss
@@ -1,24 +1,27 @@
 .proj-container {
+  margin: 40px auto auto auto;
   box-sizing: border-box;
-  // width: 100%;
-  // margin: auto;
-  // line-height: 22px;
-  // color: $dark;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   grid-gap: 10px;
-  // grid-auto-rows: auto;
 }
 
 .proj-block {
   border: 2px solid $accent;
   box-sizing: border-box;
-  // background-color: $accent;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
   .btn {
-    margin: auto auto 20px auto;
-    width: 40%;
+    width: 120px;
+    margin: auto auto 15px auto;
   }
+}
+
+.proj-btn-container {
+  margin: 0 auto;
+  flex-shrink: 0;
 }
 
 .proj-title {
@@ -36,7 +39,7 @@
   color: $dark;
   font-size: 18px;
   text-align: center;
-  margin-bottom: 20px;
+  margin-bottom: 20px; 
   padding: 0 10px;
 }
 
@@ -47,31 +50,24 @@
   text-align: center;
   height: 300px;
   object-fit: cover;
-  // border: 2px dotted $medium;
-  // box-sizing: border-box;
 }
 
 .proj-tech {
   color: $medium;
   font-size: 18px;
   text-align: center;
-  margin-bottom: 20px;
-  // padding: 10px;
+  margin: auto 5px;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
-
 }
 
 .proj-tech-single {
-  // background: $darkAccent;
   border: 1px solid $darkAccent;
-  // border-radius: 10px;
   padding: 7px;
   margin: 3px 3px;
   box-sizing: border-box;
-
 }
 
 // ---------------------------------------------------------------------------
@@ -79,6 +75,12 @@
 // ---------------------------------------------------------------------------
 .proj-pg-container {
   margin: 100px auto;
+
+  .proj-title {
+    font-size: $titleSize;
+    letter-spacing: 3px;
+    word-spacing: 2px;
+  }
 }
 
 .proj-pg-header {
@@ -89,28 +91,13 @@
 .proj-pg-home-link {
   text-decoration: none;
   color: white;
+
+  &:hover {
+    color: $accent;
+  }
 }
 
-.proj-pg-btn {
-  width: 50%;
-  margin: auto;
-}
-  
-// .proj-pg-img {
-//   display: block;
-//   width: 100%;
-//   text-align: center;
-//   height: 80%;
-//   object-fit: cover;
-//   border: 2px dotted $medium;
-//   box-sizing: border-box;
-// }
-
-.github-btn {
-  width: 50%;
-  margin: auto auto 20px auto;
-}
-
+// Contains the github/ demo buttons
 .proj-btn-link-container {
   display: grid;
   grid-gap: 20px;
@@ -118,49 +105,43 @@
   grid-template-rows: auto;
 }
 
-.github-btn-left {
+.proj-pg-btn-left {
   width: 70%;
   margin: 0 0 40px auto;
   grid-column: 1;
   display: inline-block;
 }
 
-.demo-btn-right{
+.proj-pg-btn-right{
   width: 70%;
   margin: 0 0 40px 0;
   grid-column: 2;
   display: inline-block;
 }
 
+.proj-pg-btn-center {
+  width: 40%;
+  margin: auto auto 40px auto;
+}
 
+.proj-pg-back-btn {
+  width: 40%;
+  margin: 40px auto auto auto;
+}
+  
+.proj-pg-img {
+  display: block;
+  width: 100%;
+  text-align: center;
+  height: 80%;
+  object-fit: cover;
+  border: 2px solid $accent;
+  box-sizing: border-box;
+}
 
-// .caption {
-//   font-size: 14px;
-//   color: $dark;
-//   text-align: center;
-//   margin-bottom: 40px;
-// }
-
-// .proj-btn + .line {
-//   margin-top: 30px;
-// }
-
-// .line + .proj-title {
-//   margin-top: 30px;
-// }
-
-// .proj-pg-img + .caption {
-//   margin-top: 10px;
-// }
-
-// p + .proj-btn {
-//   margin-top: 40px;
-// }
-
-// #proj-rainGauge {
-//   object-position: 100% 85%;
-// }
-
-// #proj-puppet {
-//   object-position: 70% 50%;
-// }
+.caption {
+  font-size: 14px;
+  color: $dark;
+  text-align: center;
+  margin: 10px auto 40px auto;
+}
